force-app/main/default/objects/Supplier/Supplier.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>