force-app/main/default/objects/Supplier/fields/NZC_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>NZC_Contact_Email__c</fullName>
    <description>Used to store Email of the supplier</description>
    <label>Email</label>
    <type>Email</type>
</CustomField>