force-app/main/default/objects/Supplier/fields/NZC_Region__c.field-meta.xml
<CustomField>
    <fullName>NZC_Region__c</fullName>
    <description>Used to store region of the supplier</description>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMER</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>LATAM</fullName>
            </value>
            <value>
                <fullName>EMEA</fullName>
            </value>
            <value>
                <fullName>INDIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>