force-app/main/default/objects/Supplier/fields/NZC_Status__c.field-meta.xml
<CustomField>
    <fullName>NZC_Status__c</fullName>
    <description>Used to store current status of the supplier</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>To be Onboarded</fullName>
            </value>
            <value>
                <fullName>Supplier Onboarded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>