force-app/main/default/objects/Supplier/fields/NZC_Supplier_External_ID__c.field-meta.xml
<CustomField>
    <fullName>NZC_Supplier_External_ID__c</fullName>
    <description>Created to map Sustainability Scorecard to Supplier</description>
    <externalId>true</externalId>
    <label>NZC Supplier External ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>