force-app/main/default/objects/Supplier/fields/NZC_Supplier_Onboarded_Date__c.field-meta.xml
<CustomField>
    <fullName>NZC_Supplier_Onboarded_Date__c</fullName>
    <description>Whenever the Status is updated to &quot;Supplier Onboarded&quot; this Date field is populated as Today&apos;s Date</description>
    <label>Supplier Onboarded Date</label>
    <type>Date</type>
</CustomField>