force-app/main/default/objects/Supplier/validationRules/NZC_Supplier_Status_field.validationRule-meta.xml
<ValidationRule>
    <fullName>NZC_Supplier_Status_field</fullName>
    <active>true</active>
    <description>ESG Team User can only select &apos;To be onboarded&apos; status. Once the Supplier&apos;s status value is updated to &apos;Supplier Onboarded&apos; by the Admin, the ESG user should not be able to change the Status field.</description>
    <errorConditionFormula>OR(
AND(
    ISCHANGED( NZC_Status__c ),  
    ISPICKVAL( PRIORVALUE(NZC_Status__c), &apos;Supplier Onboarded&apos;),
    ISPICKVAL($User.User_Type__c, &apos;ESG Team&apos;)  
    ),
AND(
    ISCHANGED( NZC_Status__c ),
    ISPICKVAL($User.User_Type__c, &apos;ESG Team&apos;),
    OR( ISBLANK( TEXT(NZC_Status__c) ),
        ISPICKVAL( NZC_Status__c, &apos;New&apos;),
        ISPICKVAL( NZC_Status__c, &apos;Supplier Onboarded&apos;)
      )
)
)</errorConditionFormula>
    <errorDisplayField>NZC_Status__c</errorDisplayField>
    <errorMessage>You can only select &apos;To be onboarded&apos; when it&apos;s not in &apos;Supplier onboarded&apos; status</errorMessage>
</ValidationRule>