force-app/main/default/objects/Supplier/listViews/All_Supplier.listView-meta.xml
<ListView>
    <fullName>All_Supplier</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>NZC_Status__c</columns>
    <columns>CompanyRelationshipType</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <label>All Suppliers</label>
</ListView>